Overlap issues, but first...

--- a/static/index.css
+++ b/static/index.css
@@ -25,7 +25,7 @@ img.bg {
 #page-wrap {
     position: relative;
     width: 80%;
-    margin: 50px auto;
+    margin: 500px auto;
     padding: 20px;
     background: white;
     -moz-box-shadow: 0 0 20px black;
